# bakerpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: Basic.yml  main.yml
templates/conda/: cookiecutter.json
templates/conda/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  requirements.yml
templates/conda/{{ cookiecutter.project_slug }}/tests/: test_main.py
templates/uv/{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
templates/uv/{{ cookiecutter.project_slug }}/scripts/: executable.py
templates/uv/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: main.py
tests/: test_cookiecutter_conda_template.py  test_cookiecutter_uv_template.py
