[project]
name = "{{ cookiecutter.project_slug }}"
requires-python = ">= {{ cookiecutter.python_version }}"
version = "0.0.0"
dependencies = [
  "loguru",
  "click"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "Q"]

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "pytest",
  "pytest-cov",
  "mypy"
]
